--- a/report/main.tex
+++ b/report/main.tex
@@ -207,7 +207,8 @@ Negative temperature Coefficient (NTC), means that the sensor resistance decreas
 
 
 \subsection{LM35 - Precision Centigrade Temperature Sensor}
-    The LM35 is a precision integrated-circuit temperature sensor with an output voltage that is linearly proportional to the temperature in Celsius. Unlike other temperature sensors calibrated in Kelvin, the LM35 does not require the user to subtract a constant value to obtain Celsius scaling, simplifying the measurement process. The sensor offers a high level of accuracy, ensuring a typical error of just ±0.5°C at 25°C.
+
+    The LM35 is a precision integrated-circuit temperature sensor with an output voltage that is linearly proportional to the temperature in Celsius, making it more straight forward to use. Unlike other temperature sensors calibrated in Kelvin, the LM35 does not require the user to subtract a constant value to obtain Celsius scaling, simplifying the measurement process. The sensor offers a high level of accuracy, ensuring a typical error of just $\pm 0.5^\circ C$ at $25^\circ C$.
 
 \subsection{DS18B20 - Digital Thermometer}
 
