--- a/report/main.tex
+++ b/report/main.tex
@@ -245,8 +245,8 @@ following sections.
         \textbf{Characteristic}         & \textbf{MCP6001}      & \textbf{TL084}   & \textbf{LM324}  \\ \hline
         \textbf{Max Output (V)}         &$(V+)-25mV$            & $(V+)$           & $(V+) - 1.5V$   \\ \hline
         \textbf{Minimum Output (V)}     &$(V-)+25mV$            & $(V-) + 1.5V$   & $(V-) + 150mV$  \\ \hline
-        \textbf{Supply Range (V)}       & $1.8$ to $6.0$        & $4.5$ to $40$    & $3V$ to $36V$   \\ \hline
-        \textbf{Offset (mV)}            & $\pm 4.5$             & $1$              & $\pm 3 mV$      \\ \hline
+        \textbf{Supply Range (V)}       & $1.8V$ to $6.0V$      & $4.5V$ to $40V$  & $3V$ to $36V$   \\ \hline
+        \textbf{Offset (mV)}            & $\pm 4.5mV$             & $1mV$              & $\pm 3 mV$      \\ \hline
         \textbf{Max Output (mA)}        & $\pm 23 mA$ $(5.5V)$  & $10 mA$          & $\pm 30 mA$     \\ \hline
         \textbf{Idle Consumption}       & $100 \mu A $          & $1.4$ $mA$       & $240 \mu A$      \\ \hline
         \end{tabular}
@@ -435,7 +435,7 @@ following sections.
     \end{figure}
 
     From this graphic, the maximum and minimum voltages values can be extracted, so from them, the output voltage 
-    will vary between $V_{outAFE} \in [3.25V;0.15V]$, from 10ºC to 40ºC, theoricaly. These values are within the \textit{ADC} range, so no information will be lost.
+    will vary between $V_{outAFE} \in [3.25V;0.15V]$, from 10ºC to 40ºC, theoretically. These values are within the \textit{ADC} range, so no information will be lost.
 \subsection{LM35}
 
     This integrated-circuit temperature sensor, generates an output
@@ -674,7 +674,7 @@ following sections.
     \end{figure}
 
     This behavior will not affect negatively the final implementation of the circuit, although the power consumption of the simulated system was sligthly above the expected, 
-    the maximum value reached the $2.37mW$, instead of the $1.93mW$ theoricaly calculated.
+    the maximum value reached the $2.37mW$, instead of the $1.93mW$ theoretically calculated.
     
 \section{Implementation and Experimental Tests}
 
